--- a/index.css
+++ b/index.css
@@ -177,12 +177,12 @@ section .section-center p {
   line-height: 1.3rem;
 }
 
-footer {
+main {
   background-color: var(--very-light-gray);
   font-family: var(--font-family);
   padding-bottom: 50px;
 }
-footer .image {
+main .image {
   width: 100%;
   height: 50%;
 }
@@ -192,17 +192,17 @@ footer .image {
   object-fit: cover;
   border-radius: 5px 5px 0 0;
 }
-footer .footer-center {
+main .footer-center {
   display: flex;
   gap: 20px;
 }
-footer .teamfoot {
+main .teamfoot {
   padding: 40px 30px;
 }
-footer .teamfoot h2 {
+main .teamfoot h2 {
   margin: 15px 0;
 }
-footer h1 {
+main h1 {
   padding: 30px 0;
   font-weight: 400;
   font-size: 30px;
@@ -215,30 +215,30 @@ footer h1 {
   height: 510px;
   overflow: hidden;
 }
-footer h5 {
+main h5 {
   font-weight: 300;
   font-size: 15px;
   color: var(--grayish-blue);
 }
-footer .footer-center h2 {
+main .footer-center h2 {
   width: 260px;
   font-weight: 400;
   font-size: 20px;
   color: var(--dark-blue);
 }
-footer h2:hover {
+main h2:hover {
   color: var(--lime-green);
   cursor: pointer;
   transition: ease-in-out;
   transition-duration: 2s;
 }
-footer .footer-center p {
+main .footer-center p {
   line-height: 1.5rem;
   font-weight: 300;
   font-size: 14px;
   color: var(--grayish-blue);
 }
-main {
+footer {
   background: var(--dark-blue);
   color: var(--white);
 }
@@ -248,7 +248,7 @@ main {
   padding: 20px 0;
   font-family: var(--font-family);
 }
-main .main-container {
+footer .main-container {
   display: flex;
   gap: 10rem;
 }
@@ -256,42 +256,42 @@ main .main-container {
   line-height: 4.5em;
   font-size: 12px;
 }
-main .icons {
+footer .icons {
   display: flex;
   font-size: 12px;
 }
-main .icons img {
+footer .icons img {
   padding: 4px;
 }
-main .icons a:hover {
+footer .icons a:hover {
   color: var(--lime-green);
 }
 
-main .main-center {
+footer .main-center {
   display: flex;
   gap: 10rem;
 }
-main .main-center ul li {
+footer .main-center ul li {
   list-style-type: none;
   text-decoration: none;
   line-height: 1.6rem;
   font-size: 14px;
   font-weight: 300;
 }
-main .main-center ul a {
+footer .main-center ul a {
   text-decoration: none;
   color: var(--white);
 }
-main .main-center ul a:hover {
+footer .main-center ul a:hover {
   color: var(--lime-green);
   transition: ease-in-out;
   transition-duration: 0.3s;
 }
-main .main-end {
+footer .main-end {
   line-height: 3rem;
   font-family: var(--font-family);
 }
-main .main-end a {
+footer .main-end a {
   text-decoration: none;
   color: var(--white);
   padding: 13px;
@@ -302,12 +302,12 @@ main .main-end a {
   right: -80px;
   font-size: 16px;
 }
-main .main-end a:hover {
+footer .main-end a:hover {
   background: linear-gradient(20deg, var(--lime-green), var(--bright-cyan));
   transition: ease-in-out;
   transition-duration: 0.3s;
 }
-main .main-end p {
+footer .main-end p {
   font-size: 14px;
   color: var(--grayish-blue);
 }
@@ -415,36 +415,36 @@ main .main-end p {
     text-align: center;
   }
 
-  footer .footer-center {
+  main .footer-center {
     flex-direction: column;
     gap: 15px;
   }
-  footer h1 {
+  main h1 {
     padding-top: 100px;
     text-align: center;
   }
-  footer .content h2 {
+  main .content h2 {
     font-size: 15px;
   }
-  footer .content p {
+  main .content p {
     font-size: 11px;
     line-height: 1rem;
   }
-  main .main-flex {
+  footer .main-flex {
     flex-direction: column;
     text-align: center;
     align-items: center;
   }
-  main .main-container {
+  footer .main-container {
     flex-direction: column;
     gap: 0;
   }
-  main .main-center {
+  footer .main-center {
     flex-direction: column;
     gap: 0;
     margin: 20px 0;
   }
-  main .main-end a {
+  footer .main-end a {
     position: initial;
   }
 }
